drill comment updates

--- a/cookbook/meal-prep/grid-drills/css/drill_page0.css
+++ b/cookbook/meal-prep/grid-drills/css/drill_page0.css
@@ -9,10 +9,10 @@
 
     However, the importance of identifying
     Containers and Items has not changed,
-    and that is also where students will
-    mess up the most.
+    and that is also where you will likely
+    mess up the most!
 
-    The main properties students will need 
+    The main properties you will need 
     to know how to use are:
 
     - Grid Container Properties
