--- a/cookbook/meal-prep/grid-drills/css/drill_page1.css
+++ b/cookbook/meal-prep/grid-drills/css/drill_page1.css
@@ -5,7 +5,7 @@
     activating the grid functionality, and
     then setting up two columns.
 
-    Students could also have used absolute
+    You could also have used absolute
     or relative units to solve this one
     (something like 235px or 47%), but
     fractional units make things MUCH 
