--- a/cookbook/meal-prep/grid-drills/css/drill_page2.css
+++ b/cookbook/meal-prep/grid-drills/css/drill_page2.css
@@ -6,7 +6,7 @@
     middle one is roughly twice as large as
     the outer ones.
 
-    Again, students CAN use absolute or 
+    Again, you CAN use absolute or 
     relative units, but it's a lot more work
     to do the math or trial-and-error to figure
     out the exact values, as opposed to just
