--- a/cookbook/meal-prep/grid-drills/css/drill_page3.css
+++ b/cookbook/meal-prep/grid-drills/css/drill_page3.css
@@ -3,15 +3,15 @@
 /*
     This drill is a set up for the next one.
 
-    Students can technically solve this one
+    You can technically solve this one
     by just activating the grid and setting
     up the three columns.
 
     Setting up grid-template-areas properly
-    will look exactly the same if they do
+    will look exactly the same if you do
     it correctly.
 
-    However, encourage them to try to use
+    However, we encourage you to try to use
     the grid-template-areas property for 
     practice (again, in preparation for 
     the next drill).
