--- a/cookbook/meal-prep/grid-drills/css/drill_page6.css
+++ b/cookbook/meal-prep/grid-drills/css/drill_page6.css
@@ -9,7 +9,7 @@
     they are arranged and organized the exact
     same way.
 
-    The content may throw some students off,
+    The content inside may throw you off a bit,
     but the solution is basically the same,
     just with a different layout.
 */
