--- a/showcase/css/metube.css
+++ b/showcase/css/metube.css
@@ -21,7 +21,7 @@
 }
 
 .showcase {
-    width: 200px;
+
     text-align: center;
 }
 
@@ -29,15 +29,15 @@
     border-style: solid;
     border-color: #333333;
     background-color: rgb(0, 25, 31);
-    width: 50%;
+
     display: inline-block;
 }
 
 .showcasePreview iframe {
     background-color: white;
-    width: 1000%;
-    height: 1000%;
-    transform: scale(0.10);
+    width: 500%;
+    height: 500%;
+    transform: scale(0.20);
 }
 
 .caption {
@@ -45,13 +45,13 @@
     border-style: solid;
     border-color: #333333;
     background-color: rgb(0, 25, 31);
-    padding: 4px 4px 6px;
+    width: 200px;
     margin: 10px auto;
-    width: 100px;
+    padding: 4px 4px 6px;
 }
 
 .caption a {
     color: rgb(214, 213, 213);
-    font-family:'Courier New', Courier, monospace;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 8px;
 }
