--- a/cookbook/examples/basic-css-drills/css/style.css
+++ b/cookbook/examples/basic-css-drills/css/style.css
@@ -6,10 +6,14 @@ body {
     margin: 0px;
     padding: 36px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-image: url("../images/greek_temple_flipped.PNG");
-    background-size: cover;
-    background-position: center;
+    background-image: url("../images/neptune_temple_flipped.jpg");
+    background-size: 150%;
+    background-position: center right 15%;
     background-attachment: fixed;
+}
+
+h1 {
+    text-shadow: 0px 0px 4px white;
 }
 
 section {
