--- a/cookbook/examples/the-10-trials-of-basic-css/css/style.css
+++ b/cookbook/examples/the-10-trials-of-basic-css/css/style.css
@@ -6,7 +6,7 @@ body {
     margin: 0px;
     padding: 36px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-image: url("../images/neptune_temple_flipped.jpg");
+    background-image: url("../images/neptune_temple_flipped.JPG");
     background-size: 150%;
     background-position: center right 15%;
     background-attachment: fixed;
