--- a/cookbook/examples/box-framing/css/style_complete.css
+++ b/cookbook/examples/box-framing/css/style_complete.css
@@ -8,7 +8,7 @@
 
 .frame-1 {
     display: inline-block;
-    border: 10px solid #654f2b;
+    border: 20px solid #654f2b;
     margin: 70px 12px 0px;
     box-shadow: -2px 2px 2px #444444;
     vertical-align: top;
@@ -16,9 +16,10 @@
 
 .frame-2 {
     display: inline-block;
-    border: 10px solid #3b2c14;
-    margin: 90px 12px 20px;
+    border: 20px solid #3b2c14;
+    margin: 120px 12px 20px;
     box-shadow: 0px 2px 2px #444444;
+    vertical-align: top;
 }
 
 .container {
@@ -26,7 +27,7 @@
 }
 
 .frame-3 {
-    border: 8px solid #64552d;
+    border: 16px solid #64552d;
     border-radius: 50%;
     display: inline-block;
     margin: 30px 12px 0px 0px;
@@ -34,10 +35,10 @@
 }
 
 .frame-4 {
-    border: 10px solid #483b14;
+    border: 20px solid #483b14;
     border-radius: 2px;
     margin: 20px 12px 0px 24px;
-    width: 100px;
+    width: 180px;
     box-shadow: 2px 2px 2px #444444;
 }
 
@@ -48,29 +49,29 @@
     background-color: #DDDDDD;
     border: 0px;
     box-shadow: inset 0px 0px 4px black;
-    padding: 16px;
+    padding: 32px;
 }
 
 .frame-3 div {
     border-radius: 50%;
-    padding: 4px;
-}
-
-.frame-4 div {
     padding: 8px;
 }
 
+.frame-4 div {
+    padding: 16px;
+}
+
 .frame-1 img {
-    width: 80px;
+    width: 180px;
 }
 
 .frame-2 img {
-    width: 120px;
+    width: 240px;
 }
 
 .frame-3 img {
-    width: 80px;
-    height: 80px;
+    width: 160px;
+    height: 160px;
     border-radius: 50%;
     /*
         The CSS Property below addresses that peculiar
@@ -87,6 +88,6 @@
 .frame-4 h2 {
     background-color: rgb(142, 199, 206);
     padding: 8px;
-    font-size: 12px;
+    font-size: 24px;
     margin: 0px;
 }
