--- a/cookbook/examples/product-showcase-site/css/style.css
+++ b/cookbook/examples/product-showcase-site/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap');
+
 * {
     box-sizing: border-box;
 }
@@ -14,6 +16,10 @@ body {
 
 .section img {
     width: 100%;
+}
+
+a {
+    color: #ffdd00;
 }
 
 .pink {
@@ -47,17 +53,17 @@ body {
     text-align: center;
 }
 
-a {
-    color: #ffdd00;
-}
-
 h1 {
-    font-size: 78px
+    font-size: 78px;
+    font-family: "Sofia Sans", sans-serif;
+    font-weight: 900;
 }
 
 h2 {
     font-size: 48px;
-    margin: 12px 0px 0px;
+    font-family: "Sofia Sans", sans-serif;
+    font-weight: 900;
+    margin: 20px 0px 0px;
 }
 
 p {
@@ -74,15 +80,50 @@ p {
     display: inline-block;
     background-color: #ffdd00;
     color: #F752AD;
+    text-decoration: none;
     border-radius: 12px;
     padding: 18px;
     min-width: 300px;
     font-size: 28px;
     font-weight: bold;
+    margin-bottom: 36px;
+}
+
+.fake-small-button {
+    display: inline-block;
+    text-decoration: none;
+    border-radius: 12px;
+    padding: 8px;
+    min-width: 200px;
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 12px;
+    margin-bottom: 36px;
+}
+
+.teal .fake-small-button {
+    color: #00e0be;
+    background-color: #007300;
+}
+
+.blue .fake-small-button {
+    color: #6027b4;
+    background-color: #00c9ff;
+}
+
+.orange .fake-small-button {
+    color: #ff5a47;
+    background-color: #ffdd00;
+}
+
+.seagreen .fake-small-button {
+    color: #c3f5d3;
+    background-color:#6e5be8;
 }
 
 .accent {
     font-size: 28px;
-    font-weight: bold;
+    font-weight: 800;
     font-style: italic;
+    font-family: "Sofia Sans", sans-serif;
 }
