--- a/css/agenda.css
+++ b/css/agenda.css
@@ -33,10 +33,6 @@ h1 + h3 {
     margin-bottom: 48px;
 }
 
-h2 {
-    font-size: 40px;
-}
-
 .centered {
     text-align: center;
 }
@@ -55,13 +51,12 @@ h2 {
 }
 
 #assignments h2:first-child,
-#agenda h2:first-child {
+#agenda h2:first-child,
+#agenda2 h2:first-child {
     margin-top: 0px;
 }
 
-#agenda h2:first-child {
-    text-align: center;
-}
+
 
 #assignments img {
     display: inline-block;
