--- a/css/agenda.css
+++ b/css/agenda.css
@@ -13,9 +13,9 @@ body {
 }
 
 #layout {
-    /* max-width: 1400px;
-    width: 75%; */
-    margin: 48px;
+    max-width: 1800px;
+    width: 90%;
+    margin: 48px auto;
     background-color: #FFFFFF99;
     border: 8px solid navy;
     /* border: 8px solid black; */
@@ -194,11 +194,65 @@ a {
     margin-left: 24px;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1500px) {
+
+    #layout {
+        padding: 24px;
+    }
+
+    h1 {
+        font-size: 28px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    h3 {
+        font-size: 16px;
+    }
+
+    #flex-container {
+        gap: 24px;
+    }
+
+    #agenda,
+    #agenda2,
+    #assignments {
+        padding: 24px;
+    }
+
+    #assignments img {
+        margin: 0px;
+    }
+}
+
+@media screen and (max-width: 1300px) {
     
     #flex-container {
-        flex-direction: column;
+        flex-wrap: wrap;
     }
+
+    #agenda,
+    #agenda2,
+    #assignments {
+        flex: 40%;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    h1 {
+        font-size: 24px;
+    }
+
+    ul {
+        padding-left: 24px;
+    }
+    /* #flex-container {
+        flex-direction: column;
+    } */
+
+
 }
 
 @media screen and (max-width: 800px) {
